github_data_collector/src/data/issue_comment/vysheng_tg.txt
`configure` complains zlib is missing. 
```
$ system_profiler SPSoftwareDataType

Software:

    System Software Overview:

      System Version: macOS 10.15.2 (19C57)
      Kernel Version: Darwin 19.2.0

$  openssl version -a
LibreSSL 2.8.3
built on: date not available
platform: information not available
options:  bn(64,64) rc4(16x,int) des(idx,cisc,16,int) blowfish(idx) 
compiler: information not available
OPENSSLDIR: "/private/etc/ssl"

$ whereis openssl
/usr/bin/openssl

$ ./configure --with-openssl=/usr/bin/openssl && make
checking for gcc... gcc
checking whether the C compiler works... yes
checking for C compiler default output file name... a.out
checking for suffix of executables... 
checking whether we are cross compiling... no
checking for suffix of object files... o
checking whether we are using the GNU C compiler... yes
checking whether gcc accepts -g... yes
checking for gcc option to accept ISO C89... none needed
checking for library containing clock_gettime... none required
checking for library containing backtrace... none required
checking for event_base_new in -levent... yes
checking how to run the C preprocessor... gcc -E
checking for grep that handles long lines and -e... /usr/bin/grep
checking for egrep... /usr/bin/grep -E
checking for ANSI C header files... yes
checking for sys/types.h... yes
checking for sys/stat.h... yes
checking for stdlib.h... yes
checking for string.h... yes
checking for memory.h... yes
checking for strings.h... yes
checking for inttypes.h... yes
checking for stdint.h... yes
checking for unistd.h... yes
checking event2/event.h usability... yes
checking event2/event.h presence... yes
checking for event2/event.h... yes
checking for openssl/ssl.h in /usr/bin/openssl... no
checking whether compiling and linking against OpenSSL works... no
configure: error: No openssl found. With --disable-openssl, libtgl will use libgcrypt instead.
```
Some parts of `config.log`:

```
$ ./configure --with-openssl=/usr/bin/openssl

configure:4384: checking for openssl/ssl.h in /usr/bin/openssl
configure:4395: result: no
configure:4407: checking whether compiling and linking against OpenSSL works
Trying link with OPENSSL_LDFLAGS=; OPENSSL_LIBS=; OPENSSL_INCLUDES=
configure:4429: gcc -o conftest -g -O2   -I/usr/local/include  -L/usr/local/lib  conftest.c  -levent  >&5
conftest.c:21:10: fatal error: 'openssl/ssl.h' file not found
#include <openssl/ssl.h>
         ^~~~~~~~~~~~~~~
1 error generated.
configure:4429: $? = 1
configure: failed program was:

| #define EVENT_V2 1
| /* end confdefs.h.  */
| #include <openssl/ssl.h>
| int
| main ()
| {
| SSL_new(NULL)
|   ;
|   return 0;
| }
configure:4437: result: no
configure:4439: error: No openssl found. With --disable-openssl, libtgl will use libgcrypt instead.

OPENSSL_INCLUDES=''
OPENSSL_LDFLAGS=''
OPENSSL_LIBS=''
```

Looks like Tg-cli doesn't support LibreSSL. I can't find any other useful information even searching `'openssl/ssl.h' file not found`.

Any ideas?

Reference: #1488
hiiiiii
im using telegram cli and i need to convert the output of telegram cli to jq format is there anyway that
i can do this.
please help me thanks.
i have an error when i wan load a photo or document please help me ?
error_code"=>71, "error"=>"RPC_CALL_FAIL 400: FILEREF_UPGRADE_NEEDED"
please help me
Hi
Can I set domain for links?

example :
`https://telegram.com/files/QlFBREJBQUQ0d1VBQXRXTnFWTFJtZE1jRTBUYUN4WUU6Og.mp4
`
to
`https://mydomain.com/files/QlFBREJBQUQ0d1VBQXRXTnFWTFJtZE1jRTBUYUN4WUU6Og.mp4`
gg.toat('salam')

I have been using the software and the truth is that I am very satisfied with the performance and thank you very much for sharing it. My question is about the possibility of changing the file download permissions by default. That is, an image is sent to the user and created in the downloads folder with permissions 640 by default. I know how change the umask iworks but I have not really found a way to change the default permissions to write files with tg client. Thank you.

Regards

Since today any download of an image either gets stuck or gives the message:

 ```FAIL: 92: RPC_CALL_FAIL 400: FILEREF_UPGRADE_NEEDED```

Any hints?
Hi there

Today Lua script with load_document has stop working.

I have the following piece of code on a lua script.  **The save_file callback is never called.**

Does any one has experienced the same today ?

Below the lua code and the log received.

Thank you!!

```
function save_file(extra, success, file)
    print("save file")
    if success then
       print("sucess")
    end
end

function on_msg_receive (msg)
    if msg.out then
        return
    end

    if msg.media then    ---check if msg is media
        print("process media 1")
        mark_read (msg.from.id, ok_cb, true)
        print("process media 2")
        fromphone = msg.from.phone
        if isempty(fromphone) then
           fromphone = "unknown"
        end

        fromid = msg.from.id
        if isempty(fromid) then
           fromid = "unknownid"
        end
        print("proceso media step " .. msg.id)

        a = {}

       a[0] = fromphone
        a[1] = msg.id
        a[2] = msg.date
        a[3] = fromid
        a[4] = msg.media.type
        a[5] = msg.to.phone

        if msg.media.type == 'document' then
           print("call load_document")
           load_document(msg.id, save_file, a);
        end

        receiver = 'user#id'..msg.from.id
        print("mark_read")
        mark_read (receiver, ok_cb, false)

    end
end
```

---> Log


process media 1
process media 2
proceso media step 1917801
call load_document
mark_read
1917801 [21:57]  user#141898667 »»» [document B2C FacturaV3 (1).pdf: type=application/pdf size=460KiB]
 *** error for query #6745230083553881088: #420 FLOOD_WAIT_5 (HANDLED)

if not, then it would be a really nice feature :)